chapter-4/canary/initial/v1-deployment.yaml
# v1 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-deployment-v1
  labels:
    app: recommendation
    version: v1
    env: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommendation
      version: v1
      env: v1
  template:
    metadata:
      labels:
        app: recommendation
        version: v1
        env: v1
    spec:
      containers:
      - name: recommendation
        image: prashanthchaitanya715/recommendation:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
