chapter-4/canary/initial/v2-deployment.yaml
# v2 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-deployment-v2
  labels:
    app: recommendation
    version: v2
    env: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommendation
      version: v2
      env: v2
  template:
    metadata:
      labels:
        app: recommendation
        version: v2
        env: v2
    spec:
      containers:
      - name: recommendation
        image: prashanthchaitanya715/recommendation:v2
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
